@@ -1,33 +1,43 @@
 # This file is execfile()d with the current directory set to its containing dir.
 import sys, os
 import time
+import ConfigParser
+
+
 
 print 'Reading configuration file conf.py '
 
-name = 'deploy'
-Name = 'Deploy'
-project = 'openalea'
-Project = 'OpenAlea'
+config = ConfigParser.RawConfigParser()
+config.read('sphinx.ini')
+name = config.get('metadata','package')
+release = config.get('metadata','release')
+version = config.get('metadata','version')
+project = config.get('metadata','project')
+openalea = config.get('metadata', 'path_to_openalea')
+
+if not openalea:
+    openalea = os.environ['OPENALEA']
+    if not openalea:
+        print """ERROR: openalea path unknown. '
+You can set it as an environmental variable:
+
+ >>>export OPENALEA=path_to_openalea
+
+or inside the sphinx.ini (field path_to_openalea)"""
+        sys.exit()
+print 'Openalea path is ' + openalea 
+
 
 # -----------------------------------------------------------------------------
 #  NOTHING to CHANGE BELOW. Note that some options still have 'openalea' 
 #  harcoded (e.g., the CSS filename.
 # -----------------------------------------------------------------------------
+Project = project.capitalize()
+Name = name.capitalize()
 
 # Get the year
 year = time.ctime().split()[4]
 
-# Get the release version from the setup file
-print 'Reading the setup.py file to get the version '
-text = open(os.path.abspath('../setup.py')).read()
-for line in text.split('\n'):
-    if line.startswith('version'):
-        release = line.split('=')[1]
-        release = release.replace(' ','')
-        release = release.replace('\'','')
-        release = release.replace('\"','')
-        release = str(release)
-        break
 # now check that we have the release 
 try:
     print 'version found of %s package is %s ' % (name, release)
@@ -35,19 +45,10 @@ except NameError:
     'Please, provide the \'version\' variable within your setup.py file'
 
 # This paths are required to access the extension and the import_modules.py file
-sys.path.append(os.path.abspath('../../doc/sphinxext'))
-sys.path.append(os.path.abspath('../../doc/sphinxext/numpyext'))
-sys.path.append(os.path.abspath('./'+name))
+sys.path.append(openalea + '/doc/sphinxext')
+sys.path.append(openalea + '/doc/sphinxext/numpyext')
 
-# Sometimes, modules are not parsed (because a metaclass was found).
-# import_modules.py contain a list of import that can be called to
-# prevent errors when sphinx builds the inheritance diagram
-# This paths are required to access the inheritance diagram extension
-try:
-    print 'importing modules'
-    import import_modules   #created by sphinx_tools
-except Exception,e:
-    print e, 'Some imports failed in conf.py'
+
 
 import ipython_console_highlighting
 
@@ -74,7 +75,7 @@ extensions = [
 todo_include_todos =True
 
 # Add any paths that contain templates here, relative to this directory.
-templates_path = ['../../doc/.templates']
+templates_path = [openalea + '/doc/.templates']
 
 # The suffix of source filenames.
 source_suffix = '.rst'
@@ -93,14 +94,6 @@ copyright = unicode('2009,'+ Project + '.' + Name)
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
-# The short X.Y version
-# The full version, including alpha/beta/rc tags.
-try:
-    indice = release.find('.', 2)
-    version = release[0:indice]
-except:
-    version = release
-
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -154,17 +147,17 @@ html_style = 'openalea.css'
 
 # The name of an image file (relative to this directory) to place at the top
 # of the sidebar.
-html_logo = '../../doc/images/wiki_logo_openalea.png'
+html_logo = openalea + '/doc/source/images/wiki_logo_openalea.png'
 
 # The name of an image file (within the static path) to use as favicon of the
 # docs.  This file should be a Windows icon file (.ico) being 16x16 or 32x32
 # pixels large.
-#html_favicon = None
+html_favicon = openalea + '/doc/source/images/oaicon.ico'
 
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ['.static', '../../doc/.static']
+html_static_path = ['.static', openalea + '/doc/.static']
 
 # If not '', a 'Last updated on:' timestamp is inserted at every page bottom,
 # using the given strftime format.
@@ -224,7 +217,7 @@ latex_documents = [
 
 # The name of an image file (relative to this directory) to place at the top of
 # the title page.
-latex_logo =  '../../doc/images/wiki_logo_openalea.png'
+latex_logo =  openalea + '/doc/source/images/wiki_logo_openalea.png'
 
 # For "manual" documents, if this is true, then toplevel headings are parts,
 # not chapters.
@@ -250,5 +243,11 @@ latex_preamble = """
 
 
 # Example configuration for intersphinx: refer to the Python standard library.
-intersphinx_mapping = {'http://docs.python.org/dev': None}
-intersphinx_mapping = {'file:///home/cokelaer/Work/eclipse_env/openalea/core/doc/html': None}
+intersphinx_mapping = {'http://docs.python.org/dev': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/core/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/visualea/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/deploy/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/deploygui/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/sconsx/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/misc/html/': None,
+'http://openalea.gforge.inria.fr/doc/sphinx/stdlib/html/': None }
