@@ -1,4 +1,9 @@
+.. Do not edit. 
+.. File automatically generated by sphinx_tools.py, revision 1604, on Tue Feb 17 10:15:04 2009
+
 .. _deploy:
+
+.. module:: deploy
 
 OpenAlea Deploy documentation
 #############################
@@ -9,55 +14,47 @@ Module description
 .. sidebar:: Summary
 
     :Version: |version|
-    :Release: |release| 
+    :Release: |release|
     :Date: |today|
-    :Author: `See AUTHORS.txt <../../AUTHORS.txt>`_
-    :Changelog: `See ChangeLog.txt <../../ChangeLog.txt>`_
-    
-.. topic:: general 
+    :Author: See `Authors`_ section
+    :ChangeLog: See `ChangeLog`_ section
 
-    |deploy| supports the installation of OpenAlea packages via 
-    the network and manages their dependencies . It is an 
-    extension of Setuptools.
+.. topic:: Overview
 
-    Additional Features :
-     - Discover and manage packages in EGG format
-     - Declare shared libraries directory and include directories
-     - Call SCons scripts
-     - Create namespaces if necessary
-     - Support post_install scripts
-     - Support 'develop' command
-     - OpenAlea GForge upload
+    .. include:: user/overview.txt
 
-    It doesn't include any GUI interface (See OpenAlea.DeployGUI for that).
-
-
-Deploy documentation
-==================== 
+Documentation
+=============
 
 .. toctree::
     :maxdepth: 1
 
-    deploy/user_index.rst   
-    deploy/reference_index.rst
+    user/index.rst   
+    deploy/index.rst
 
-- A `PDF <../latex/deploy.pdf>`_ version of |deploy| documentation is available.
-  
+- A `PDF <../latex/deploy.pdf>`_ version of |deploy| documentation is 
+  available.
+
 .. seealso::
 
    More documentation can be found on the
    `openalea <http://openalea.gforge.inria.fr>`__ wiki.
 
+Authors
+=======
 
+.. include:: ../AUTHORS.txt
+
+ChangeLog
+=========
+
+.. include:: ../ChangeLog.txt
 
 License
 =======
 
-|deploy| is released under a Cecill-C License. See `LICENSE.txt <../../LICENSE.txt>`_    
+|deploy| is released under a Cecill-C License.
 
-.. note:: Cecill-C license is a LGPL compatible license.
-
-
-
+.. note:: `Cecill-C <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>`_ license is a LGPL compatible license.
 
 .. |deploy| replace:: OpenAlea.Deploy
