@@ -1,7 +1,28 @@
-User documentation
-##################
+.. Do not edit. 
+.. File automatically generated by sphinx_tools.py, revision 1604, on Tue Feb 17 10:15:04 2009
 
-.. warning:: The Authors of this package should provide a user guid with examples, tutorial and full description of the modules that would complete the API reference guide.
+.. _deploy_user:
 
+Deploy User Guide
+#################
 
+:Version: |version|
+:Release: |release|
+:Date: |today|
 
+This reference manual details functions, modules, and objects included in 
+OpenAlea.Deploy, describing what they are and what they do. For learning
+how to use OpenAlea.Deploy see :ref:`deploy_reference`.
+
+.. warning::
+
+   This "Reference Guide" is still very much work in progress; the material
+   is not organized, and many aspects of OpenAlea.Deploy are not 
+   covered.
+
+   More documentation can be found on the
+   `openalea <http://openalea.gforge.inria.fr>`__ wiki.
+
+.. toctree::
+    :maxdepth: 1
+            
